<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    tools:context="com.iengos.bikerent.home"
    android:background="#3B5998"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="7"
    android:rowCount="7"
    android:orientation="horizontal">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/accountImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="top|center"
        android:src="@drawable/ic_account_circle_black"
        app:civ_border_color="#EEE"
        app:civ_shadow="true"
        app:civ_shadow_radius="2"
        app:civ_shadow_color="#AAA"
        android:layout_columnSpan="2"
        android:layout_rowSpan="4"/>

    <TextView
        android:id="@+id/InfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:gravity="left"
        android:textAllCaps="true"
        android:textSize="16dp"
        android:textStyle="bold|italic"
        android:text="@string/info_label"
        android:textColor="#DDD"
        android:layout_columnSpan="5"
        android:layout_rowSpan="1"/>

    <TextView
        android:id="@+id/markerAccountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:text="@string/account_name"
        android:textColor="#DDD"
        android:textSize="15dp"
        android:inputType="textCapSentences"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"/>

    <TextView
         android:id="@+id/markerAccountSurname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:gravity="left"
         android:text="@string/account_surname"
         android:textColor="#DDD"
         android:textSize="15dp"
         android:inputType="textCapSentences"
         android:layout_columnSpan="4"
         android:layout_rowSpan="1"/>

    <TextView
        android:id="@+id/markerAccountNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:gravity="left"
        android:text="@string/account_cellulare"
        android:textColor="#DDD"
        android:textSize="15dp"
        android:inputType="textCapSentences"
        android:layout_columnSpan="2"
        android:layout_rowSpan="1"/>

    <TextView
        android:id="@+id/markerAccountEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:gravity="left"
        android:text="@string/account_email"
        android:textColor="#DDD"
        android:textSize="15dp"
        android:layout_columnSpan="5"
        android:layout_rowSpan="1"/>

    <TextView
        android:id="@+id/markerNumHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:text="@string/account_num_ord"
        android:textColor="#DDD"
        android:textSize="14dp"
        android:layout_columnSpan="2"
        android:layout_rowSpan="1"/>

    <TextView
        android:id="@+id/markerBikeNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:text="@string/account_bike_num"
        android:textColor="#DDD"
        android:textSize="15dp"
        android:layout_columnSpan="2"
        android:layout_rowSpan="1"/>

    <TextView
        android:id="@+id/markerBikePayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="left"
        android:text="@string/account_price"
        android:textColor="#DDD"
        android:textSize="15dp"
        android:layout_columnSpan="3"
        android:layout_rowSpan="1"/>

    <TextView
        android:id="@+id/markerCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="left"
        android:text="@string/account_countDown"
        android:textColor="#DDD"
        android:textSize="15dp"
        android:layout_columnSpan="2"
        android:layout_rowSpan="1"/>

    <TextView
        android:id="@+id/markerDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="left"
        android:text="@string/account_time"
        android:textColor="#DDD"
        android:textSize="15dp"
        android:layout_columnSpan="5"
        android:layout_rowSpan="1"/>

</GridLayout>